layout shift and reading_text context fixed

--- a/core/static/css/style.css
+++ b/core/static/css/style.css
@@ -308,5 +308,5 @@ form .form-label {
 } */
 
 .option-card {
-  min-height: 20rem;
+  min-height: 8rem;
 }
